BE - fixing endpoint && FE - working on pulling tasks data
