# backend-express/routes/userTasksRoutes.ts
@@ -1,11 +1,11 @@
 import express from 'express';
-import * as userControllers from "../controllers/userTasksControllers";
+import * as userTasksControllers from "../controllers/userTasksControllers";
 import { validateJWT } from '../utils';
 
 const router = express.Router();
 
-router.get('/api/user/tasks', validateJWT, userControllers.getUserTasks);
-router.post('/api/user/tasks', validateJWT, userControllers.createUserTask);
-router.patch('/api/user/tasks/:task_id', validateJWT, userControllers.updateUserTask); 
+router.get('/api/user/tasks', validateJWT, userTasksControllers.getUserTasks);
+router.post('/api/user/tasks', validateJWT, userTasksControllers.createUserTask);
+router.patch('/api/user/tasks/:task_id', validateJWT, userTasksControllers.updateUserTask); 
 
 export default router;
